--- a/package.json
+++ b/package.json
@@ -17,7 +17,10 @@
     "@googlemaps/js-api-loader": "^1.16.8",
     "@prisma/client": "^5.10.2",
     "@radix-ui/react-avatar": "^1.1.3",
+    "@radix-ui/react-popover": "^1.1.7",
     "@radix-ui/react-select": "^2.1.6",
+    "@radix-ui/react-slider": "^1.2.4",
+    "@radix-ui/react-switch": "^1.1.4",
     "@radix-ui/react-tabs": "^1.1.3",
     "@react-google-maps/api": "^2.20.6",
     "@tanstack/react-query": "^5.28.0",
@@ -31,6 +34,7 @@
     "@upstash/redis": "^1.34.6",
     "bcrypt": "^5.1.1",
     "bcryptjs": "^3.0.2",
+    "class-variance-authority": "^0.7.1",
     "cloudinary": "^2.6.0",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
